--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,12 +8,25 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;  /*フォントサイズ10px*/
+}
+
 body {
     font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.4em;  /*フォントサイズ14px*/
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 10rem;
+}
+
+h2 {
+    font-size: 5rem;
+}
+
+h3 {
+    font-size: 3rem;
 }
 
 li {
@@ -22,37 +35,281 @@ li {
 
 a  {
     text-decoration: none;
-    font-size: 50px;
+    font-size: 5rem;
     display: inline-block;
-    margin-bottom: 15px;
-    width: 400px;
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
-    position: relative;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 iframe {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-/* トップページ以外ではヘッダーを置くので後々のためにコメントアウトで残しておく
+/*--------------------------------------------ここからheader-wrapper--------------------------------------------*/
+
 header {
-    background: white;
-    height: 70px;
+    background: #BDB7A0;
     width: 100%;
-    top: 0;
     position: fixed;
-    z-index: 10;
-    font-size: 25px;
-    color: #4689FF;
-    padding: 5px 10px;
-    border-bottom: 2px solid #EEEEEE;
-} */
+    z-index:999;
+    color: #545F6E;
+    border-bottom: 2px solid #545F6E;
+    padding: 15px;
+    padding-right: 0;
+}
+
+.header-wrapper {
+    display: flex;
+}
+
+.header-left,
+.header-right {
+    flex: auto;
+    width: 50%;
+}
+
+.page-title {
+    pointer-events: none;
+}
+
+.header-menu {
+    display: flex;
+    text-align: center;
+    height: 100%;
+    align-items: center;
+}
+
+.header-item {
+    flex: auto;
+    width : 33.33333% ; 
+    width : -webkit-calc(100% / 3) ;
+    width : calc(100% / 3) ;
+    text-align: center;
+    border-left: 2px solid;
+}
+
+.header-item:first-child {
+    border: none;
+}
+
+.header-hiphop,
+.header-jpop,
+.header-vocaloid {
+    font-size: 2.5rem;
+    height: 100%;
+    color: #545F6E;
+    height: 100%;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.header-hiphop::after,
+.header-jpop::after,
+.header-vocaloid::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: #262C3A;
+    bottom: 10px;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+
+.header-hiphop:hover,
+.header-jpop:hover,
+.header-vocaloid:hover {
+    color: #262C3A;
+}
+
+.header-hiphop:hover::after,
+.header-jpop:hover::after,
+.header-vocaloid:hover::after {
+    bottom: 2px;
+    opacity: 1;
+    visibility: visible;
+}
+
+.header-hiphop-list,
+.header-jpop-list,
+.header-vocaloid-list {
+    position: fixed;
+    background-color: #BDB7A0;
+    border: 2px solid;
+    border-top: none;
+    top: 69px;
+    flex-direction: column;
+    width: calc(100% / 6);
+    height: 180px;
+    display: none;
+}
+
+.header-hiphop-item,
+.header-jpop-item,
+.header-vocaloid-item {
+    height: calc(100% / 3);
+    width: 100%;
+    border-top: 2px solid;
+}
+
+.header-hiphop-item:first-child,
+.header-jpop-item:first-child,
+.header-vocaloid-item:first-child {
+    border: none;
+}
+
+.header-hiphop-name,
+.header-jpop-name,
+.header-vocaloid-name {
+    font-size: 3rem;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: #545F6E;
+}
+
+.header-hiphop-name:hover,
+.header-jpop-name:hover,
+.header-vocaloid-name:hover {
+    color: #262C3A;
+}
+
+/*ここからレスポンシブ用*/
+
+.btn-header { 
+    -webkit-appearance: none;
+    appearance: none;
+    vertical-align: middle;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-radius: 0;
+    width: 3rem;
+    height: 3rem;
+    margin-right: 15px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    display: none;
+}
+
+.btn-line {
+    width: 100%;
+    height: 4px;
+    background-color: #545F6E;
+    display: block;
+    position: relative;
+    transition: .2s;
+}
+
+.btn-line::before, .btn-line::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #545F6E;
+    transition: .5s;
+}
+
+.btn-line::before {
+    transform: translateY(-11px);
+}
+
+.btn-line::after {
+    transform: translateY(11px);
+}
+
+.btn-line.open {
+    background-color: transparent;
+}
+
+.btn-line.open::before,
+.btn-line.open::after {
+    content: "";
+    background-color: #545F6E;
+    transition: .2s;
+}
+
+.btn-line.open::before {
+    transform: rotate(45deg);
+}
+
+.btn-line.open::after {
+    transform: rotate(-45deg);
+}
+
+.responsive-menu {
+    position: fixed;
+    right: -30%;
+    width: 30%;
+    height: 20%;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    color: #545F6E;
+    background-color: #BDB7A0;
+    transition: .3s;
+    display: none;
+    border-left: 2px solid;
+    border-bottom: 2px solid
+}
+
+.responsive-item {
+    width: 100%;
+    height: 100%;
+}
+
+.responsive-hiphop,
+.responsive-jpop,
+.responsive-vocaloid {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid;
+    color: #545F6E;
+}
+
+.responsive-vocaloid {
+    border: none;
+}
+
+.responsive-menu.open {
+    right: 0;
+}
+
+/*--------------------------------------------ここからtop-wrapper--------------------------------------------*/
+
+.top-wrapper {
+    background-image: url(./photo/modern.jpeg);
+    background-size: cover;
+    width: 100%;
+    padding: 200px 0 450px 50px;
+}
+
+.top-text {
+    color: #fff;
+    opacity: 0.8;
+    pointer-events: none;
+}
 
 /*--------------------------------------------ここからhiphop-wrapper--------------------------------------------*/
 /*hiphop-wrapperからfooterにかけて、青のグラデーションを作っていく*/
@@ -66,14 +323,17 @@ header {
 
 .hiphop {
     padding-bottom: 100px;
+    flex: auto;
+    width: 50%;
 }
 
 .hiphop-music {
     width: 50%;
-    height: 70%;
-    position: absolute;
-    right: 0%;
-    top: 100px;
+    margin-top: 10rem;
+    padding-top: 35%;
+    height: 0;
+    position: relative;
+    flex: auto;
 }
 
 .hiphop-list {
@@ -87,6 +347,9 @@ header {
     border-radius: 10px;
     padding: 0px 0px 8px 5px;
     transition: all 0.15s ease;
+    line-height: 1.2;
+    margin-bottom: 25px;
+    width: 400px;
 }
 
 .hiphop-name {
@@ -106,24 +369,29 @@ header {
 .jpop-wrapper {
     background-color: #303745;
     width: 100%;
-    padding-top: 70px;
+    padding: 70px 0;
     color: #BDB7A0;
-    height: 700px;
 }
+
+.reverse {
+    flex-direction: row-reverse;
+}
+
 
 .jpop-music {
     width: 50%;
-    height: 70%;
-    position: absolute;
-    left: 0%;
-    top: 100px;
+    margin-top: 10rem;
+    padding-top: 35%;
+    height: 0;
+    position: relative;
+    flex: auto;
 }
 
 .jpop {
+    padding-left: 5%;
     padding-bottom: 100px;
-    position: absolute;
-    top: 0%;
-    left: 55%;
+    flex: auto;
+    width: 50%;
 }
 
 .jpop-list {
@@ -139,8 +407,10 @@ header {
     z-index: 2;
     display: flex;
     align-items: center;
-    line-height: 1.5em;
+    line-height: 1.5;
     border: 1px solid #BDB7A0;
+    margin-bottom: 25px;
+    width: 400px;
 }
 
 .crossbar {
@@ -197,6 +467,8 @@ header {
 
 .vocaloid {
     padding-bottom: 100px;
+    flex: auto;
+    width: 50%;
 }
 
 .vocaloid-list {
@@ -211,6 +483,8 @@ header {
     -moz-perspective: 300px;
     perspective: 300px;
     line-height: 1.2;
+    margin-bottom: 25px;
+    width: 400px;
 }
 
 .vocaloid-name {
@@ -265,4 +539,86 @@ header {
     -moz-transform: rotateX(0deg);
     transform: rotateX(0deg);
     z-index: 1;
+}
+
+.vocaloid-music {
+    width: 50%;
+    margin-top: 10rem;
+    padding-top: 35%;
+    height: 0;
+    position: relative;
+    flex: auto;
+}
+
+/*--------------------------------------------ここからfooter-wrapper--------------------------------------------*/
+
+.footer-wrapper {
+    background-color: #BDB7A0;
+    width: 100%;
+    padding: 70px 0;
+    color: #545F6E;
+}
+
+.footer {
+    flex: auto;
+}
+
+.footer-menu {
+    display: flex;
+}
+
+.footer-hiphop,
+.footer-jpop,
+.footer-vocaloid {
+    width : 33.33333% ;
+    width : -webkit-calc(100% / 3) ;
+    width : calc(100% / 3) ;
+    padding-left: 3rem;
+    border-left: 2px solid;
+}
+
+.footer-hiphop {
+    border: none;
+}
+
+.btn-footer {
+    color: #545F6E;
+}
+
+.footer-name {
+    font-size: 3rem;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+.footer-list::before,
+.footer-list::after {
+    content: "";
+    border-top: 2px solid #545F6E;
+    flex-grow: 1;
+}
+
+.footer-list li {
+    margin: 0 2rem;
+}
+
+.icon {
+    width: 100%;
+}
+
+.fab {
+    color: #545F6E;
+    flex: auto;
+    font-size: 4rem;
+}
+
+.btn-footer:hover,
+.fab:hover {
+    color: #262C3A;
 }
