--- a/stylesheet.css
+++ b/stylesheet.css
@@ -190,6 +190,8 @@ header {
     color: #262C3A;
 }
 
+
+
 /*ここからレスポンシブ用*/
 
 .btn-header { 
@@ -259,7 +261,6 @@ header {
     position: fixed;
     right: -30%;
     width: 30%;
-    height: 20%;
     margin-left: auto;
     display: flex;
     flex-direction: column;
@@ -268,7 +269,7 @@ header {
     transition: .3s;
     display: none;
     border-left: 2px solid;
-    border-bottom: 2px solid
+    line-height: 2;
 }
 
 .responsive-item {
@@ -276,9 +277,7 @@ header {
     height: 100%;
 }
 
-.responsive-hiphop,
-.responsive-jpop,
-.responsive-vocaloid {
+.responsive-title {
     width: 100%;
     height: 100%;
     display: flex;
@@ -286,15 +285,47 @@ header {
     align-items: center;
     border-bottom: 2px solid;
     color: #545F6E;
+    background-color: #BDB7A0;
+    transition: all .2s ease;
+    cursor: pointer;
 }
 
-.responsive-vocaloid {
+.responsive-title:last-child {
     border: none;
+}
+
+.responsive-title.active {
+    background-color: #545F6E;
+    color: #BDB7A0;
 }
 
 .responsive-menu.open {
     right: 0;
 }
+
+.responsive-list {
+    line-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition-duration: .2s;
+}
+
+.responsive-list.open {
+    border-bottom: 2px solid #545F6E;
+    line-height: 2;
+    height: auto;
+    opacity: 1;
+}
+
+.responsive-name {
+    font-size: 3rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    color: #545F6E;
+}
+
 
 /*--------------------------------------------ここからtop-wrapper--------------------------------------------*/
 
@@ -310,6 +341,7 @@ header {
     opacity: 0.8;
     pointer-events: none;
 }
+
 
 /*--------------------------------------------ここからhiphop-wrapper--------------------------------------------*/
 /*hiphop-wrapperからfooterにかけて、青のグラデーションを作っていく*/
@@ -376,7 +408,6 @@ header {
 .reverse {
     flex-direction: row-reverse;
 }
-
 
 .jpop-music {
     width: 50%;
@@ -589,7 +620,7 @@ header {
     font-size: 3rem;
 }
 
-.footer-list {
+.footer-icon-list {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -597,14 +628,14 @@ header {
     margin-top: 5rem;
 }
 
-.footer-list::before,
-.footer-list::after {
+.footer-icon-list::before,
+.footer-icon-list::after {
     content: "";
     border-top: 2px solid #545F6E;
     flex-grow: 1;
 }
 
-.footer-list li {
+.footer-icon-list li {
     margin: 0 2rem;
 }
 
@@ -622,4 +653,3 @@ header {
 .fab:hover {
     color: #262C3A;
 }
-
