--- a/responsive.css
+++ b/responsive.css
@@ -130,4 +130,104 @@
 
 @media all and (max-width: 540px) {
 
+    h1 {
+        font-size: 6rem;
+    }
+
+    h2 {
+        font-size: 4rem;
+    }
+
+    a {
+        font-size: 4rem;
+    }
+
+    .responsive-menu {
+        width: 50%;
+        right: -50%;
+    }
+
+    .top-wrapper {
+        padding: 150px 0 200px 0;
+    }
+
+    .hiphop-wrapper,
+    .jpop-wrapper,
+    .vocaloid-wrapper,
+    .footer-wrapper {
+        padding: 50px 0;
+    }
+
+    .btn-hiphop,
+    .btn-jpop,
+    .btn-vocaloid {
+        width: 100%;
+    }
+
+    .btn-hiphop {
+        line-height: 1;
+    }
+
+    .btn-jpop {
+        line-height: 1.3;
+    }
+
+    .btn-jpop::after {
+        width: 4.5em;
+        bottom: .15em;
+    }
+
+    .hiphop-item,
+    .jpop-item,
+    .vocaloid-item {
+        margin: 0;
+    }
+
+    .vocaloid-name {
+        -webkit-transform-origin: 50% 50% -35px;
+        -moz-transform-origin: 50% 50% -35px;
+        transform-origin: 50% 50% -35px;
+    }
+
+    .vocaloid-hover-name {
+        -webkit-transform-origin: 50% 50% -35px;
+        -moz-transform-origin: 50% 50% -35px;
+        transform-origin: 50% 50% -35px;
+    }
+
+    .hiphop-music,
+    .jpop-music,
+    .vocaloid-music {
+        margin-top: 10px;
+    }
+
+    .footer-hiphop,
+    .footer-jpop,
+    .footer-vocaloid {
+        padding: 0;
+    }
+
+    .footer-name {
+        font-size: 3rem;
+    }
+
+    .footer-icon-list {
+        margin-top: 40px;
+        text-align: center;
+    }
+
+    .footer-icon-list::before,
+    .footer-icon-list::after {
+        content: none;
+    }
+
+    .footer-icon-list li {
+        margin: 0;
+        width: 20%;
+    }
+
+    .icon {
+        width: auto;
+    }
+
 }
