--- a/responsive.css
+++ b/responsive.css
@@ -39,6 +39,10 @@
     .vocaloid {
         padding-bottom: 0;
     }
+    
+    .jpop {
+        padding-left: 0;
+    }
 
     .hiphop-list,
     .jpop-list,
