--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,6 +67,7 @@ header {
     border-bottom: 2px solid #545F6E;
     padding: 15px;
     padding-right: 0;
+    height: 70px;
 }
 
 .header-wrapper {
@@ -270,6 +271,7 @@ header {
     display: none;
     border-left: 2px solid;
     line-height: 2;
+    top: 70px;
 }
 
 .responsive-item {
